# novo

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac  libnovoconsensus.pc.in
build-aux/m4/: novo_find_bdb48.m4  novo_find_bdb53.m4  novo_qt.m4  novo_subdir_to_include.m4
contrib/macdeploy/: custom_dsstore.py
doc/: Doxyfile  README.md  REST-interface.md  benchmarking.md  bips.md  release-notes.md  shared-libraries.md
doc/man/: Makefile.am
doc/release-notes/: release-note-0.1.0.md  release-note-0.1.1.md  release-note-0.1.2.md  release-note-0.2.0.md
qa/rpc-tests/: bumpfee.py  p2p-fullblocktest.py  p2p-policy.py  prioritise_transaction.py  rest.py
qa/rpc-tests/test_framework/: blocktools.py  mininode.py
share/: setup.nsi.in
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  cuckoocache.h  dbwrapper.h  hash.cpp  hash.h  httprpc.h  httpserver.cpp  httpserver.h  (+69 more)
src/bench/: .gitignore  bench.h  mempool_eviction.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  importkeysdialog.cpp  importkeysdialog.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.h  novo.cpp  novo.qrc  novo_locale.qrc  novoaddressvalidator.cpp  novoaddressvalidator.h  novoamountfield.cpp  novoamountfield.h  novogui.cpp  novogui.h  novostrings.cpp  novounits.cpp  (+57 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  paperwalletdialog.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: novo_af.ts  novo_af_ZA.ts  novo_ar.ts  novo_be_BY.ts  novo_bg.ts  novo_bg_BG.ts  novo_ca.ts  novo_ca@valencia.ts  novo_ca_ES.ts  novo_cs.ts  novo_cy.ts  novo_da.ts  novo_de.ts  novo_el.ts  novo_el_GR.ts  novo_en.ts  novo_en_GB.ts  novo_eo.ts  novo_es.ts  novo_es_AR.ts  novo_es_CL.ts  novo_es_CO.ts  novo_es_DO.ts  novo_es_ES.ts  novo_es_MX.ts  novo_es_UY.ts  novo_es_VE.ts  novo_et.ts  novo_et_EE.ts  novo_eu_ES.ts  novo_fa.ts  novo_fi.ts  (+54 more)
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: bignum.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  novoconsensus.cpp  novoconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  Makefile  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bignum_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  novo-util-test.py  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  reverselock_tests.cpp  (+23 more)
src/wallet/: coincontrol.h  crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+21 files in other folders)
